--- a/views/group_page.erb
+++ b/views/group_page.erb
@@ -27,7 +27,7 @@
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-4-tablet">
         <div class="mdc-card card-tile">
-          <p class="card-title">Relevent Lines</p>
+          <p class="card-title">Relevant Lines</p>
           <h4 class="card-data mdc-typography--headline4">
             <%= format_number(files.lines_of_code) %>
           </h4>
@@ -65,7 +65,7 @@
       </div>
     </div>
     <div class="mdc-text-field-helper-line">
-      <div class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent mdc-text-field-helper-text--validation-msg">You can search based on File column.</div>
+      <div class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent mdc-text-field-helper-text--validation-msg">You can search based on the File column.</div>
     </div>
   </div>
 
